--- a/styles/pnt3.css
+++ b/styles/pnt3.css
@@ -1,7 +1,7 @@
 .contenedor {
     position: relative;
 }
-
+ 
 .menu-w{
     position: absolute;
     display: flex;
@@ -12,15 +12,28 @@
     z-index: 2;
 }
 
-.btn-atras{
+
+#btn3-1{
     position: absolute;
-    top: 10% ;
+    top: 43% ;
     left: 2%;
     z-index: 2;
-} 
 
-#boton {
-    position: absolute;
+    background-color: #FF8833;
+    color: white;
+    font-size: medium;
+    padding: 10px 40px;
+    border: none;
+    cursor: pointer;
+    margin-bottom: 20px;
+}
+
+#btn3-2{
+    position:absolute;
+    top: 67% ;
+    left: 2%;
+    z-index: 2;
+
     background-color: #FF8833;
     color: white;
     font-size: medium;
@@ -40,4 +53,3 @@
     overflow: hidden;
     position: static;
 }
-
