Cambiar nombres y añadir pantallas

--- a/styles/pnt3.css
+++ b/styles/pnt3.css
@@ -21,8 +21,8 @@
 
     background-color: #FF8833;
     color: white;
-    font-size: medium;
-    padding: 10px 40px;
+    font-size: small;
+    padding: 8px 40px;
     border: none;
     cursor: pointer;
     margin-bottom: 20px;
@@ -36,8 +36,8 @@
 
     background-color: #FF8833;
     color: white;
-    font-size: medium;
-    padding: 10px 40px;
+    font-size: small;
+    padding: 8px 40px;
     border: none;
     cursor: pointer;
     margin-bottom: 20px;
