--- a/styles/pnt4.css
+++ b/styles/pnt4.css
@@ -18,10 +18,13 @@
     background-color: #FF8833;
     color: white;
     font-size: medium;
-    padding: 10px 40px;
+    padding: 15px 135px;
     border: none;
     cursor: pointer;
     margin-bottom: 20px;
+
+    top: 84% ;
+    left: 5%;
 }
 
 .fondo {
