--- a/styles/home.css
+++ b/styles/home.css
@@ -3,6 +3,16 @@
 
 }
 
+.menu-w{
+    position: absolute;
+    display: flex;
+    justify-content: flex-start;
+    overflow: hidden;
+    top: 0;
+    left: 0;
+    z-index: 2;
+}
+
 .fondo {
     background-color: rgb(215, 255, 255);
     display: flex;
