--- a/styles/pnt3.1.css
+++ b/styles/pnt3.1.css
@@ -1,7 +1,14 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
+
+#font{
+    font-family: 'Roboto', sans-serif;
+    }
+
+
 .contenedor {
     position: relative;
 }
-
+ 
 .menu-w{
     position: absolute;
     display: flex;
@@ -12,37 +19,48 @@
     z-index: 2;
 }
 
+.btn-atras{
 
-#btn6-1 {
+    text-decoration: none;
+    font-size: small;
+    color: #676767;
     position: absolute;
+    top: 9% ;
+    left: 4%;
+    z-index: 2;
+} 
+
+#btn3-1-1{
+    position: absolute;
+    top: 40% ;
+    left: 5%;
+    z-index: 2;
+    border-radius: 5px;
+
     background-color: #FF8833;
     color: white;
-    font-size: medium;
-    padding: 10px 135px;
+    font-size: small;
+    padding: 8px 40px;
     border: none;
     cursor: pointer;
     margin-bottom: 20px;
-
-    display: flex;
-    top: 85% ;
-    left: 5%;
 }
 
-#btn6-2 {
-    position: absolute;
+#btn3-1-2{
+    position:absolute;
+    top: 64% ;
+    left: 5%;
+    z-index: 2;
+    border-radius: 5px;
+
     background-color: #FF8833;
     color: white;
-    font-size: medium;
-    padding: 10px 135px;
+    font-size: small;
+    padding: 8px 40px;
     border: none;
     cursor: pointer;
     margin-bottom: 20px;
-
-    top: 92% ;
-    left: 5%;
 }
-
-
 
 .fondo {
     background-color: rgb(215, 255, 255);
