--- a/styles/pnt3.css
+++ b/styles/pnt3.css
@@ -1,3 +1,10 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
+
+#font{
+    font-family: 'Roboto', sans-serif;
+    }
+
+
 .contenedor {
     position: relative;
 }
@@ -12,12 +19,23 @@
     z-index: 2;
 }
 
+.btn-atras{
+
+    text-decoration: none;
+    font-size: small;
+    color: #676767;
+    position: absolute;
+    top: 9% ;
+    left: 4%;
+    z-index: 2;
+} 
 
 #btn3-1{
     position: absolute;
-    top: 43% ;
-    left: 2%;
+    top: 46% ;
+    left: 5%;
     z-index: 2;
+    border-radius: 5px;
 
     background-color: #FF8833;
     color: white;
@@ -30,9 +48,10 @@
 
 #btn3-2{
     position:absolute;
-    top: 67% ;
-    left: 2%;
+    top: 78% ;
+    left: 5%;
     z-index: 2;
+    border-radius: 5px;
 
     background-color: #FF8833;
     color: white;
