--- a/styles/pnt7y8.css
+++ b/styles/pnt7y8.css
@@ -29,7 +29,26 @@
     z-index: 2;
 } 
 
-#boton-4 {
+#boton-7 {
+    position: absolute;
+    background-color: #FF8833;
+    color: white;
+    font-size: medium;
+    border: none;
+    cursor: pointer;
+    margin-bottom: 20px;
+    text-align: center;
+    padding: 10px 15px;
+
+    width: 350px;
+    height: 47px;
+    top: 92% ;
+    left: 4%;
+    text-align: center;
+    border-radius: 5px;
+}
+
+#boton-8 {
     position: absolute;
     background-color: #FF8833;
     color: white;
@@ -47,6 +66,7 @@
     text-align: center;
     border-radius: 5px;
 }
+
 
 
 .fondo {
